# Cliprithm

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
desing/empty_state_import_video/: code.html
desing/export_tiktok_shorts_presets/: code.html
desing/main_editor_waveform_cuts/: code.html
desing/obsidian_edit/: DESIGN.md
desing/processing_silence_detection/: code.html
desing/timeline_view_segment_management/: code.html
distribution-playbooks/: README.md  aur.md  flatpak.md  homebrew.md  snap.md
docs/: editor-actions.md  editor-v2-plan.md  editor-v2-spec.md  ffmpeg-notices.md
packaging/flatpak/: com.botom.cliprithm.yml
packaging/homebrew/: cliprithm.rb.template
packaging/snap/: snapcraft.yaml
scripts/: build_flatpak.sh  build_snap.sh  clean-artifacts.sh  generate_aur_package.py  prepare_ffmpeg_sidecars.mjs  run-tauri.mjs  verify_aur_package.sh  verify_bundled_sidecars.mjs  verify_linux_packages.mjs  verify_release_linux.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  ffmpeg.rs  library.rs  media_server.rs  media_tools.rs  mod.rs
(+54 files in other folders)
