[package]
name = "cliprithm"
version = "1.0.0"
description = "Cliprithm — Smart video silence remover"
authors = ["Edwar Diaz <edwardiaz.dev>"]
edition = "2021"

[lib]
name = "cliprithm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

